--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "tailwindcss": "^3.2.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "moment-timezone": "^0.5.40"
   }
 }
