--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "date-fns": "^2.29.3",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.40"
   }
 }
